--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  
         .logo img {
             height: 30px;
-            margin-right: 10px;
+            margin: 10px;
         }
  
         .search-box {
