new logo is added

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         .logo {
             display: flex;
             align-items: center;
+           
         }
  
         .logo img {
             height: 30px;
-            margin-right: 10px;
+            margin: 10px;
         }
  
         .search-box {
@@ -73,7 +74,7 @@
   <body>
     <nav>
       <div class="logo">
-          <img src="./persistent-systems-header-logo.png" alt="Logo">
+          <img src="./Persistent_Logo_Horizontal_Orange_Silver.png" alt="Logo">
          
       </div>
    
